# Gian-Stagno-Plus-plus-CL

./: .gitignore  LANGUAGE_SPEC.md  Makefile  README.md  easy  gdb_script  test_stdlib  test_string
docs/: CMakeLists.txt  EXAMPLES_GSPP_VS_CPP_PYTHON.md  GSPP_SPEC.md  LANGUAGE_SPEC.md  MIGRATION_GUIDE.md  README.md
examples/: easy.gs  fib  fib.gs  fib.my  final_test.gs  hello  hello.gs  hello.my  lib.gs  linked_list  linked_list.gs  struct_demo.gs  test_arc_class  test_arc_class.gs  test_arc_heap_string  test_arc_heap_string.gs  test_arc_loop  test_arc_loop.gs  test_arc_param  test_arc_param.gs  test_arc_return  test_arc_return.gs  test_arc_string  test_arc_string.gs  test_chan  test_chan.gs  test_class.gs  test_debug.gs  test_dicts  test_dicts.gs  test_empty.gs  test_exceptions  test_exceptions.gs  test_features.gs  test_generics  test_generics.gs  test_imports  test_imports.gs  test_inheritance  test_inheritance.gs  (+25 more)
examples/advanced/: math.gs  test_array.gs  test_asm.gs  (+7 more)
runtime/: Channels.cpp  Concurrency.cpp  Dicts.cpp  Exceptions.cpp  IO.cpp  Lists.cpp  Memory.cpp  Sets.cpp  Strings.cpp  Tuples.cpp
src/: ast.cpp  ast.h  codegen.cpp  codegen.h  codegen_base.cpp  codegen_expr.cpp  codegen_func.cpp  codegen_stmt.cpp  common.h  lexer.cpp  lexer.h  main.cpp  optimizer.cpp  optimizer.h  parser.cpp  parser.h  parser_base.cpp  parser_decl.cpp  parser_expr.cpp  parser_stmt.cpp  parser_type.cpp  repl.cpp  semantic.cpp  semantic.h  semantic_base.cpp  semantic_decl.cpp  semantic_expr.cpp  semantic_stmt.cpp  semantic_type.cpp
std/: io.gs  string.gs  vec.gs
